--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,5 +1,6 @@
 {
   "name": "FRCDashboard",
+  "productName": "FRCDashBoard",
   "version": "2.1.0",
   "description": "Robot control dashboard boilerplate for FRC.",
   "main": "src/main.js",
@@ -20,10 +21,11 @@
   },
   "homepage": "http://frcdashboard.github.io",
   "devDependencies": {
-    "electron": "^1.7.12",
+    "electron": "1.7.9",
+    "electron-builder": "^19.55.3",
     "electron-packager": "^10.1.1"
   },
   "dependencies": {
-    "wpilib-nt-client": "^1.7.1"
+    "wpilib-nt-client": "^1.4.2"
   }
 }
